fixed logout button styling - was not showing hover state correctly

--- a/app/sass/_meta_menu_user.sass
+++ b/app/sass/_meta_menu_user.sass
@@ -308,14 +308,15 @@
 
   .logOut
     margin: 10px 16px 0
-    background-position: 4px 2px
-    background-repeat: no-repeat
-    background-image: url('/images/icons/logout-24.png')
-    &:hover
+    .img
+      background-position: 4px 2px
+      background-repeat: no-repeat
+      background-image: url('/images/icons/logout-24.png')
+    &:hover .img
       background-position: 4px 2px
       background-repeat: no-repeat
       background-image: url('/images/icons/logout-24-hover.png')
-    &:active
+    &:active .img
       background-position: 4px 2px
       background-repeat: no-repeat
       background-image: url('/images/icons/logout-24-active.png')
